[package]
name = "screenchaser-webview"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tao = "0.32"
wry = "0.51"
rust-embed = { version = "8", features = ["debug-embed"] }
mime_guess = "2"
tracing = { workspace = true }
gtk = "0.18"
