[package]
name = "screenchaser-wled"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
screenchaser-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
mdns-sd = "0.19"

[dev-dependencies]
tracing-subscriber = { workspace = true }
